# prtsc-wayland

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  formatting.txt.bash
src/: app.rs  dbg_time.rs  main.rs  outputs.rs  points.rs  rect_fmt.rs
src/app/: base.rs  prepare.rs  screenshot.rs  selection.rs
