[package]
name = "prtsc-wayland"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true
panic = "abort"

[dependencies]
image = "0.25.5"
iter_tools = "0.24.0"
smithay-client-toolkit = "0.19.2"
wayland-client = "0.31.7"
wayland-protocols = { version = "0.32.5", features = ["client"] }
wayland-protocols-wlr = { version = "0.3.5", features = ["client"] }
