[package]
name = "prtsc-wayland"
version = "0.3.2"
edition = "2021"

[profile.release]
lto = true
strip = true
panic = "abort"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
enum_dispatch = "0.3.13"
image = "0.25.5"
iter_tools = "0.24.0"
smithay-client-toolkit = "0.19.2"
wayland-client = "0.31.7"
wayland-protocols = { version = "0.32.5", features = ["client"] }
wayland-protocols-wlr = { version = "0.3.5", features = ["client"] }
